fix overflow and menu

--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,6 @@
 body {
     font-family: "Arial";
     margin: 0;
-    background-color: #f3f3f3;
     cursor: url('/cursor/football.cur'), auto;
 }
 
@@ -24,7 +23,7 @@ a:hover {
 
 .phone-number {
     position: absolute;
-    left: 50%;
+    left: 48%;
     top: 30%;
 }
 
@@ -156,7 +155,7 @@ h1 {
     color: #343434;
 }
 
-h2 {
+h2 {    
     font-size: 18px;
     text-transform: uppercase;
     padding: 10px 20px;
@@ -165,6 +164,7 @@ h2 {
 }
 
 .left-block ul {
+    padding: 0;
     min-width: 300px;
     list-style: none;
     padding-left: 20px;
@@ -213,30 +213,52 @@ h2 {
     border-radius: 50%;
 }
 
-
-
-
 @media screen and (max-width:330px) {
     .left-block ul {
-        min-width: 100px;
+        min-width: 100%;
+    }
+}
+@media  screen and (max-width:600px) {
+    .schedule{
+        max-width: 210px;
+        flex-wrap: wrap;
+    }
+    .schedule p {
+        margin: 2px;
+    }
+    .number{
+        padding-left: 24px;
+    }
+    .phone-number{
+        top: 54%;
+        left: 2%;
     }
 
 }
 
-@media screen and (max-width: 700px) {
+@media screen and (max-width:723px) {
+    .information{
+        width: 100%;
+        display: block;
+    }
+    
+}
+
+@media screen and (max-width: 917px) {
     .bottom-images {
         row-gap: 5px;
-        column-gap: 10px;
-        justify-content: center;
+        column-gap: 10px;   
         overflow-x: scroll;
     }
 }
 
-
-
 @media screen and (max-width: 723px) {
     .information {
         flex-wrap: wrap;
+    }
+
+    .left-block ul{
+        width: 100% ;
     }
 }
 
@@ -244,6 +266,4 @@ h2 {
     .bottom-images {
         column-gap: 5px;
     }
-
 }
-
